# Project_gateway

./: .gitignore  LICENSE
gateway/: CMakeLists.txt
gateway/build_arm/: CMakeCache.txt  Makefile  tcp_client
gateway/driver/: hello_mod.c
gateway/models/: README.txt
gateway/src/: ai_receiver.py  frame_receiver.c  frame_sender.c  frame_sender.h  gateway_app.cpp  gpio_led.c  gpio_ops.c  gpio_ops.h  mes_handler.c  mes_handler.h  peripheral_ctrl.c  ring_buffer.h  tcp_client.c  tcp_server.c  tlv_protocol.c  tlv_protocol.h  video_capture.c  video_capture.h
gateway_vm_backup/: CMakeLists.txt  README.md
gateway_vm_backup/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake  gateway_app
gateway_vm_backup/cmake/: arm-linux-gnueabihf.cmake
gateway_vm_backup/driver/: Makefile  virtual_bh1750.c
gateway_vm_backup/src/: ai_receiver.py  bh1750_test.c  camera_test.c  frame_sender.h  gateway_app.cpp  gpio_ops.c  gpio_ops.h  main.c  mes_handler.c  mes_handler.h  ring_buffer.h  tlv_protocol.h  video_capture.c  video_capture.h
